--- a/untitled/html/styles.css
+++ b/untitled/html/styles.css
@@ -160,9 +160,170 @@
   font-size: 14px;
 }
 /*LINE FINISH*/
-/*CONTENT START*/
 
+/*CONTENT START*/
 .container{
   max-width: 1300px;
   margin: 0 50px;
+}
+
+.container .content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.container .content img{
+  width: 100%;
+  max-width: 200px;
+  margin: 10px 5px;
+  border-radius: 13px;
+}
+
+.container .information{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container .information h4{
+  margin-top: 50px;
+  margin-bottom: 10px;
+  font-size: 13px;
+  color: #599AAC;
+  letter-spacing: 1.8px;
+  text-align: center;
+}
+
+.container .information h2{
+  font-size: 30px;
+  text-align: center;
+  line-height: 1.2;
+  font-weight: bold;
+}
+
+.container .information p{
+  text-align: center;
+  font-size: 14px;
+  letter-spacing: 0.9px;
+  font-weight: 500;
+  margin: 20px 0;
+  color: rgb(160,154,154);
+}
+/*CONTENT FINISH*/
+/*FOOTER START*/
+.footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  width: 100%;
+  height: 300px;
+}
+
+.footer-picture {
+  width: 100%;
+  height: 300px;
+  background-image: url("/img/18.jpg");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.footer-info{
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: 300px;
+  width: 100%;
+  background-color: #599aacb3;
+}
+
+.footer-info h4,p{
+  background-color: transparent;
+  color: #fff;
+}
+
+.footer-info h4{
+  font-size: 24px;
+  margin: 10px 70px;
+  letter-spacing: 1.2px;
+}
+
+.footer-info p{
+  font-size: 14px;
+  text-align: center;
+  padding: 0 10px;
+}
+
+.footer-info a{
+  padding: 15px 35px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  background-color: #887a9c;
+  margin-bottom: 15px;
+  margin-right: 70px;
+  margin-left: 70px;
+  text-align: center;
+  border-radius: 35px;
+  font-size: 12px;
+}
+.footer-info span{
+  background-color: #887a9c;
+  color: #a0d1df;
+  font-size: 12px;
+}
+/*FOOTER FINISH*/
+/*REPONSIVE START*/
+@media screen and (max-width: 870px){
+  .footer-info{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+  .about{
+    flex-direction: column;
+  }
+  .about .about-info h1{
+    font-size: 35px;
+  }
+  .about .about-info p{
+    font-size: 12px;
+  }
+  .about .about-info{
+    display: flex;
+    flex-direction: column;
+  }
+  .about .picture-1{
+    margin-left: 30px;
+  }
+  .about .picture-2{
+    margin-top: 15px;
+  }
+  .about .about-info a{
+    margin: 5px 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+ .container .information h2{
+   font-size: 25px;
+ }
+  .container p{
+    font-size: 12px;
+  }
 }
